# dcmTask

./: .gitmodules  CMakeLists.txt
include/Tasks/: dcmTask.h
include/mc_tasks/: dcmTask.h
src/: CMakeLists.txt
src/Tasks/: dcmTask.cpp
src/mc_tasks/: dcmTask.cpp
